examples/test/testpolicy15819.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15819
  namespace: namespace263
spec:
  podSelector:
    matchLabels:
      key0: value25
      key41: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value35
          key34: value22
      podSelector:
        matchLabels:
          key8: value21
          key12: value42
